--- a/Game/app/src/main/res/values/strings.xml
+++ b/Game/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="button_options">Options</string>
     <string name="button_credits">Crédits</string>
     <string name="button_quitter">Quitter</string>
+    <string name="app_name">AndroidGame</string>
+    <string name="title_activity_world_controller">WorldController</string>
 </resources>
